--- a/MacroTracker/Areas/Admin/Views/Shared/Index.cshtml
+++ b/MacroTracker/Areas/Admin/Views/Shared/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model MacroTracker.Models.UserViewModel
+﻿@using MacroTracker.Models
+@model MacroTracker.Models.UserViewModel
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
